remove title from post_model, update share_post
