# cmd/swag/docs/swagger.json
@@ -226,7 +226,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "post"
+                    "post_user"
                 ],
                 "summary": "Get many posts",
                 "parameters": [
@@ -234,12 +234,6 @@
                         "type": "string",
                         "description": "User ID to filter posts",
                         "name": "user_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Filter by post title",
-                        "name": "title",
                         "in": "query"
                     },
                     {
@@ -320,16 +314,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "post"
+                    "post_user"
                 ],
                 "summary": "Post create post",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Title of the post",
-                        "name": "title",
-                        "in": "formData"
-                    },
                     {
                         "type": "string",
                         "description": "Content of the post",
@@ -371,6 +359,49 @@
                 }
             }
         },
+        "/posts/share_post/{post_id}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "When user want to share post of another user post's",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "post_share"
+                ],
+                "summary": "share post",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "PostId",
+                        "name": "post_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseData"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/posts/{post_id}": {
             "get": {
                 "security": [
@@ -386,7 +417,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "post"
+                    "post_user"
                 ],
                 "summary": "Get post by ID",
                 "parameters": [
@@ -427,7 +458,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "post"
+                    "post_user"
                 ],
                 "summary": "delete post by ID",
                 "parameters": [
@@ -468,7 +499,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "post"
+                    "post_user"
                 ],
                 "summary": "update post",
                 "parameters": [
@@ -478,12 +509,6 @@
                         "name": "post_id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Post title",
-                        "name": "title",
-                        "in": "formData"
                     },
                     {
                         "type": "string",
